--- a/.plzconfig
+++ b/.plzconfig
@@ -1,9 +1,10 @@
-; Please config file
-; Leaving this file as is is enough to use plz to build your project.
-; Please will stay on whatever version you currently have until you run
-; 'plz update', when it will download the latest available version.
-;
-; Or you can uncomment the following to pin everyone to a particular version;
-; when you change it all users will automatically get updated.
-; [please]
-; version = 16.2.1
+[PluginDefinition]
+name = python
+
+[PluginConfig "DEFAULT_INTERPRETER"]
+ConfigKey = DefaultInterpreter
+DefaultValue = python3
+
+[PluginConfig "PEX_TOOL"]
+ConfigKey = PexTool
+DefaultValue = @self//tools/please_pex
