--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -4,11 +4,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: ./pleasew test -e e2e
-  test-e2e:
-    needs: Test
-    runs-on: ubuntu-latest
-    container:
-      image: thoughtmachine/please_ubuntu:20210720
-    steps:
       - run: ./pleasew test -i e2e
