--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -3,14 +3,7 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
-    container:
-      image: thoughtmachine/please_ubuntu:20210720
     steps:
-      - run: plz test -e e2e
-  test-e2e:
-    needs: Test
-    runs-on: ubuntu-latest
-    container:
-      image: thoughtmachine/please_ubuntu:20210720
-    steps:
-      - run: plz test -i e2e
+      - uses: actions/checkout@v2
+      - run: ./pleasew test -e e2e
+      - run: ./pleasew test -i e2e
