--- a/build_defs/BUILD
+++ b/build_defs/BUILD
@@ -3,3 +3,9 @@ filegroup(
     srcs = ["python.build_defs"],
     visibility = ["PUBLIC"],
 )
+
+filegroup(
+    name = "multiversion_wheel",
+    srcs = ["multiversion_wheel.build_defs"],
+    visibility = ["//third_party/..."],
+)
