--- a/.plzconfig
+++ b/.plzconfig
@@ -7,6 +7,9 @@ PreloadBuildDefs = build_defs/python.build_defs
 [Go]
 ImportPath = github.com/please-build/python-rules
 
+[proto]
+protoctool = //third_party/proto:protoc
+
 [PluginDefinition]
 name = python
 
