--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -5,5 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.6.9'
       - run: ./pleasew test -e e2e
       - run: ./pleasew test -i e2e
