Add `python_wheel` build definition (#10)
* Copied the python_wheel rule over from core please

* Cycle through wheel name scheme urls first before resorting to using the tool

* Append lists instead of strings

* Remove redefinition of command

* Fix bash command

* Fix

* Fix bash command again

* Capitalise shell variables

* Move  population into

* Tidy up bash command

* Add a comment

* Make config options plugin specific

* Add wheel-related config options

* Add a default value for python wheel repo

* Revert last change

* Don't fail if we no wheel repo set. Just fall back to tool

* Fail if unable to resolve any urls

* Update package override

* Correct syntax

* Does updating please version fix the issue?

* It was the double quotes

* Leave version the way it was

* Update version to 10.1?

* Change error message

* Capitalise wheel_repo and wheel_name_scheme

--- a/.plzconfig
+++ b/.plzconfig
@@ -1,5 +1,5 @@
 [Please]
-Version = >=16.9.0
+Version = >=16.10.1
 
 [Parse]
 PreloadBuildDefs = build_defs/python.build_defs
@@ -36,4 +36,12 @@ Optional = true
 [PluginConfig "module_dir"]
 ConfigKey = ModuleDir
 DefaultValue = third_party.python
+Optional = true
+
+[PluginConfig "wheel_repo"]
+ConfigKey = WheelRepo
+Optional = true
+
+[PluginConfig "wheel_name_scheme"]
+ConfigKey = WheelNameScheme
 Optional = true
