--- a/tools/wheel_resolver/test/BUILD
+++ b/tools/wheel_resolver/test/BUILD
@@ -8,7 +8,7 @@ python_test(
     name = "cross_compile_test",
     srcs = ["cross_compile_test.py"],
     deps = ["//tools/wheel_resolver/src/tags:tags"],
-    label = "manual",
+    labels = ["manual"],
 )
 
 gentest(
