--- a/tools/wheel_resolver/BUILD
+++ b/tools/wheel_resolver/BUILD
@@ -1,14 +1,9 @@
-# python_binary(
-#     name = "wheel_resolver",
-#     main = "src/resolve.py",
-# )
-
 python_binary(
     name = "wheel_resolver",
     main = "//tools/wheel_resolver/src:resolve",
     visibility = ["PUBLIC"],
-    deps = [
-        "//tools/wheel_resolver/src/tags:tags",
-        "//tools/wheel_resolver/third_party/python:argparse",
-    ],
+#     deps = [
+#         "//tools/wheel_resolver/src/tags:tags",
+#         "//tools/wheel_resolver/third_party/python:argparse",
+#     ],
 )
