--- a/tools/wheel_resolver/src/BUILD
+++ b/tools/wheel_resolver/src/BUILD
@@ -2,4 +2,8 @@ filegroup(
     name = "resolve",
     srcs = ["resolve.py"],
     visibility = ["PUBLIC"],
+    deps = [
+        "//tools/wheel_resolver/src/tags:tags",
+        "//tools/wheel_resolver/third_party/python:argparse",
+    ],
 )
