--- a/tools/wheel_resolver/BUILD
+++ b/tools/wheel_resolver/BUILD
@@ -2,4 +2,8 @@ python_binary(
     name = "wheel_resolver",
     main = "//tools/wheel_resolver/src:resolve",
     visibility = ["PUBLIC"],
+    deps = [
+        "//tools/wheel_resolver/src/wheel_tags:tags",
+        "//tools/wheel_resolver/third_party/python:argparse",
+    ],
 )
