Add function to pull license info

--- a/tools/wheel_resolver/src/BUILD
+++ b/tools/wheel_resolver/src/BUILD
@@ -5,5 +5,6 @@ filegroup(
     deps = [
         "//tools/wheel_resolver/src/wheel_tags:tags",
         "//tools/wheel_resolver/third_party/python:argparse",
+        "//third_party/python:_pkg_resources",
     ],
 )
