Remove wheel_resolver/third_party/ dir

--- a/tools/wheel_resolver/BUILD
+++ b/tools/wheel_resolver/BUILD
@@ -4,6 +4,6 @@ python_binary(
     visibility = ["PUBLIC"],
     deps = [
         "//tools/wheel_resolver/src/wheel_tags:tags",
-        "//tools/wheel_resolver/third_party/python:argparse",
+        "//third_party/python:argparse",
     ],
 )
