--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -14,3 +14,18 @@ jobs:
         run: ./pleasew test -e e2e
       - name: Run e2e test
         run: ./pleasew test -i e2e
+  release:
+    needs: [test]
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: build
+        run: ./pleasew build //tools/...
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: tatskaari/release-action@master
+        with:
+          release-files: plz-out/package
