All the stuff. Some issue with transitive deps

--- a/test/BUILD
+++ b/test/BUILD
@@ -149,7 +149,9 @@ python_test(
         "py3",
         "pip",
     ],
-    deps = ["//third_party/python:scipy"],
+    deps = [
+        "//third_party/python:scipy",
+    ],
 )
 
 python_test(
