--- a/tools/wheel_resolver/BUILD
+++ b/tools/wheel_resolver/BUILD
@@ -1,9 +1,5 @@
-python_binary(
+filegroup(
     name = "wheel_resolver",
-    main = "//tools/wheel_resolver/src:resolve",
+    srcs = ["//tools/wheel_resolver/src:resolve",],
     visibility = ["PUBLIC"],
-    deps = [
-        "//third_party/python:argparse",
-        "//tools/wheel_resolver/src/wheel_tags:tags",
-    ],
 )
