--- a/tools/wheel_resolver/src/BUILD
+++ b/tools/wheel_resolver/src/BUILD
@@ -1,9 +1,11 @@
-filegroup(
+python_binary(
     name = "resolve",
-    srcs = ["resolve.py"],
+    main = "resolve.py",
     visibility = ["PUBLIC"],
     deps = [
         "//third_party/python:argparse",
+        "//third_party/python:packaging",
+        "//third_party/python:distlib",
         "//tools/wheel_resolver/src/wheel_tags:tags",
     ],
 )
