--- a/tools/wheel_resolver/test/BUILD
+++ b/tools/wheel_resolver/test/BUILD
@@ -8,6 +8,6 @@ gentest(
     name = "e2e_test",
     data = ["//tools/wheel_resolver/src:resolve"],
     no_test_output = True,
-    test_cmd = "PKG=tensorflow; OUTS=$PKG.whl; export OUTS; $DATA --package \"$PKG\"; \
+    test_cmd = "PKG=cryptography; OUTS=$PKG.whl; export OUTS; $DATA --package \"$PKG\"; \
                 if [[ -f \"$PKG\".whl ]]; then exit 0; else exit 1; fi;",
 )
