--- a/tools/wheel_resolver/BUILD
+++ b/tools/wheel_resolver/BUILD
@@ -1,5 +1,5 @@
 filegroup(
     name = "wheel_resolver",
-    srcs = ["//tools/wheel_resolver/src:resolve",],
+    srcs = ["//tools/wheel_resolver/src:resolve"],
     visibility = ["PUBLIC"],
 )
