--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -10,6 +10,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.6.9'
+      - name: Setup golang
+        uses: actions/setup-go@v2
+        with:
+          go-version: '^1.17'
       - name: Run tests
         run: ./pleasew test -e e2e
       - name: Run e2e test
