--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -14,6 +14,11 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: '^1.17'
+      - name: Set up GCC
+        uses: egor-tensin/setup-gcc@v1
+        with:
+          version: latest
+          platform: x64
       - name: Run tests
         run: ./pleasew test -e e2e
       - name: Run e2e test
