--- a/tools/please_go_embed/BUILD
+++ b/tools/please_go_embed/BUILD
@@ -1,6 +1,6 @@
 filegroup(
-    name = "please_go",
-    srcs = ["@//_please:please_go"],
+    name = "please_go_embed",
+    srcs = ["@//_please:please_go_embed"],
     labels = ["hlink:plz-out/package"],
     visibility = ["PUBLIC"],
 )
