--- a/test/custom_runner/custom_runner_package/BUILD
+++ b/test/custom_runner/custom_runner_package/BUILD
@@ -1,7 +1,7 @@
 package(
     python = {
         "TEST_RUNNER": "test.custom_runner.runner.run",
-        "TEST_RUNNER_BOOTSTRAP": "//test/custom_runner:runner",
+        "TESTRUNNER_DEPS": "@self//test/custom_runner:runner",
     },
 )
 
