These should be self, no?

--- a/.plzconfig
+++ b/.plzconfig
@@ -6,11 +6,11 @@ PreloadBuildDefs = build_defs/python.build_defs
 
 [Go]
 ImportPath = github.com/please-build/python-rules
-embedtool = //tools/please_go_embed
-gotool = //third_party/go:toolchain|go
+embedtool = @self//tools/please_go_embed
+gotool = @self//third_party/go:toolchain|go
 
 [proto]
-protoctool = //third_party/proto:protoc
+protoctool = @self//third_party/proto:protoc
 
 [PluginDefinition]
 name = python
