--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -11,6 +11,28 @@ jobs:
         with:
           python-version: '3.6.9'
       - name: Run tests
-        run: ./pleasew test -e e2e
+        run: ./pleasew test --log_file plz-out/log/test.log -e e2e
       - name: Run e2e test
-        run: ./pleasew test -i e2e
+        run: ./pleasew test --log_file plz-out/log/e2e.log -i e2e
+      - name: Archive logs
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: logs
+          path: |
+            plz-out/log
+  release:
+    needs: [test]
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: build
+        run: ./pleasew build //tools/...
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: tatskaari/release-action@master
+        with:
+          release-files: plz-out/package
