--- a/tools/please_pex/BUILD
+++ b/tools/please_pex/BUILD
@@ -16,39 +16,12 @@ genrule(
     name = "please_pex",
     srcs = [
         ":pex_main",
-        "//third_party/python:six",
-        "//third_party/python:xmlrunner",
-        "//third_party/python:coverage",
-        "//third_party/python:debugpy",
-        "//third_party/python:pytest",
-        "//third_party/python:py",
-        "//third_party/python:pluggy",
-        "//third_party/python:attrs",
-        "//third_party/python:funcsigs",
-        "//third_party/python:more_itertools",
-        "//third_party/python:pkg_resources",
-        "//third_party/python:behave",
-        "//third_party/python:parse",
-        "//third_party/python:parse_type",
-        "//third_party/python:portalocker",
-        "//third_party/python:traceback2",
-        "//third_party/python:enum34",
-        "//third_party/python:win_unicode_console",
-        "//third_party/python:colorama",
-        "//third_party/python:packaging",
-        "//third_party/python:importlib_metadata",
-        "//third_party/python:zipp",
+        # "//third_party/python:zipp",
     ],
     outs = ["please_pex"],
     binary = True,
     cmd = [
-        # Have to make sure these exist.
-        "touch third_party/__init__.py third_party/python/__init__.py",
-        "touch tools/__init__.py tools/please_pex/__init__.py",
-        "mv third_party/python .bootstrap",
-        # A little cleanup.
-        "rm -rf third_party .bootstrap/xmlrunner/extra .bootstrap/coverage/htmlfiles .bootstrap/.*.pex.zip",
-        '"$TOOL" z -d -i .bootstrap -o "$OUTS" --preamble_file $(location :pex_main)',
+        '"$TOOL" z -d -i . -o "$OUTS" --preamble_file $(location :pex_main)',
     ],
     tools = ["//tools/jarcat"],
     visibility = ["PUBLIC"],
