Remove the preloaded build defs as they don't seem to work when including this as a subrepo

--- a/.plzconfig
+++ b/.plzconfig
@@ -2,14 +2,11 @@
 Version = >=16.10.1
 
 [Parse]
-PreloadBuildDefs = build_defs/python.build_defs
 PreloadBuildDefs = test/build_defs/test.build_defs
 
 [Go]
 ImportPath = github.com/please-build/python-rules
 
-[proto]
-protoctool = //third_party/proto:protoc
 
 [PluginDefinition]
 name = python
@@ -79,3 +76,4 @@ Optional = true
 
 [featureflags]
 PythonWheelHashing = true
+ExcludePythonRules = true
