Can't find _please:arcat

--- a/tools/please_pex/BUILD
+++ b/tools/please_pex/BUILD
@@ -16,14 +16,13 @@ genrule(
     name = "please_pex",
     srcs = [
         ":pex_main",
-        # "//third_party/python:zipp",
     ],
     outs = ["please_pex"],
     binary = True,
     cmd = [
         '"$TOOL" z -d -i . -o "$OUTS" --preamble_file $(location :pex_main)',
     ],
-    tools = ["//tools/jarcat"],
+    tools = ["//tools/arcat"],
     visibility = ["PUBLIC"],
 )
 
@@ -39,4 +38,12 @@ python_test(
         "//third_party/python:dateutil",
         "//third_party/python:requests",
     ],
+)
+
+filegroup(
+    name = "release_files",
+    srcs = [
+        ":please_pex"
+    ],
+    labels = ["hlink:plz-out/package"],
 )
