Still called jarcat on release page?

--- a/tools/arcat/BUILD
+++ b/tools/arcat/BUILD
@@ -1,5 +1,5 @@
 filegroup(
     name = "arcat",
-    srcs = ["@//_please:arcat"],
+    srcs = ["@//_please:jarcat"],
     visibility = ["PUBLIC"],
 )
