Add wheel_resolver to release page

--- a/tools/wheel_resolver/BUILD
+++ b/tools/wheel_resolver/BUILD
@@ -1,7 +1,8 @@
 subinclude("//build_defs:python")
 
-python_binary(
+filegroup(
     name = "wheel_resolver",
     srcs = ["//tools/wheel_resolver/src:resolve"],
     visibility = ["PUBLIC"],
+    labels = ["hlink:plz-out/package"],
 )
