--- a/tools/arcat/BUILD
+++ b/tools/arcat/BUILD
@@ -1,5 +1,8 @@
-filegroup(
+remote_file(
     name = "arcat",
-    srcs = ["@//_please:jarcat"],
+    url = "https://github.com/please-build/arcat/releases/download/v1.0.0/arcat-1.0.0-linux_amd64",
+    hashes = ["6705304dde3cf358d7b8f5a034dfcc8242474b76d0e439b2f39a7a99f8612749"],
+    extract = False,
+    binary = True,
     visibility = ["PUBLIC"],
 )
