--- a/tools/BUILD
+++ b/tools/BUILD
@@ -1,4 +1,11 @@
+# Once pex tool is on the plugin releases page we can download the binary with a remote_file here. Same with the whele_resolver
+
 # remote_file(
 #     name = "please_pex",
-#     url = "https://www.github.com/",
+#     url = "https://www.github.com/please-build/python_rules/...",
+# )
+
+# remote_file(
+#     name = "wheel_resolver",
+#     url = "https://www.github.com/please-build/python_rules/...",
 # )
