Move arcat rule to tools/BUILD

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -9,3 +9,12 @@
 #     name = "wheel_resolver",
 #     url = "https://www.github.com/please-build/python_rules/...",
 # )
+
+remote_file(
+    name = "arcat",
+    url = "https://github.com/please-build/arcat/releases/download/v1.0.0/arcat-1.0.0-linux_amd64",
+    hashes = ["6705304dde3cf358d7b8f5a034dfcc8242474b76d0e439b2f39a7a99f8612749"],
+    extract = False,
+    binary = True,
+    visibility = ["PUBLIC"],
+)
