Make wheel_resolver output wheel_resolver to package dir instead of resolve

--- a/tools/wheel_resolver/BUILD
+++ b/tools/wheel_resolver/BUILD
@@ -2,8 +2,7 @@ subinclude("//build_defs:python")
 
 filegroup(
     name = "wheel_resolver",
-    srcs = ["//tools/wheel_resolver/src:resolve"],
-    outs = ["wheel_resolver"],
+    srcs = ["//tools/wheel_resolver/src:wheel_resolver"],
     visibility = ["PUBLIC"],
     labels = ["hlink:plz-out/package"],
 )
