--- a/tools/wheel_resolver/test/BUILD
+++ b/tools/wheel_resolver/test/BUILD
@@ -1,5 +1,17 @@
 subinclude("//build_defs:python")
 
+package(
+    python = {
+        "WHEEL_REPO": "https://get.please.build/third_party/python/py3",
+        "WHEEL_NAME_SCHEME": [
+            "{url_base}/{package_name}-{version}-${{OS}}_${{ARCH}}.whl",
+            "{url_base}/{package_name}-{version}.whl",
+            "https://files.pythonhosted.org/packages/py3/{initial}/{package_name}/{package_name}-{version}-py3-none-any.whl",
+            "https://files.pythonhosted.org/packages/py2.py3/{initial}/{package_name}/{package_name}-{version}-py2.py3-none-any.whl",
+        ],
+    },
+)
+
 python_test(
     name = "lib_test",
     srcs = ["test.py"],
