Maybe wheel tool should be optional. Possible that user doesn't want to automatically download from pypi

--- a/.plzconfig
+++ b/.plzconfig
@@ -73,6 +73,7 @@ Optional = true
 [PluginConfig "wheel_tool"]
 ConfigKey = WheelTool
 DefaultValue = @self//tools/wheel_resolver
+Optional = true
 
 [featureflags]
 PythonWheelHashing = true
