Migrate python debugging logic to rules (#34)
* Migrate python debugging logic to rules

* Bump min version

* Fix missing index

* Bump protobuf version

--- a/.plzconfig
+++ b/.plzconfig
@@ -1,5 +1,5 @@
 [Please]
-Version = >=16.10.1
+Version = >=16.17.0
 
 [Parse]
 PreloadBuildDefs = test/build_defs/test.build_defs
@@ -30,6 +30,10 @@ DefaultValue = unittest
 [PluginConfig "test_runner_bootstrap"]
 ConfigKey = TestRunnerBootstrap
 Optional = true
+
+[PluginConfig "debugger"]
+ConfigKey = Debugger
+DefaultValue = pdb
 
 [PluginConfig "module_dir"]
 ConfigKey = ModuleDir
