Add test-runner dependencies in build def (#23)
* Add test runner deps in build def

* Add coverage as a dep for unittest

* Deps were incorrect

* All the stuff. Some issue with transitive deps

* Think things work now but needs tidying

* Delete swap file

* Delete pkg_resources hash and tidy

* Lint

* Is it a version issue?

* Don't need these deps till the end

* Might be this!

* go.mod update

* Setup go version

* Change plz version to 16.12.0

* Change version back to orig

* Delete jarcat/zip

* Delete test.results dir

* Change vis

* Add gcc?

* Want gcc before golang

* Revert plzconfig

* Move chicken_pex to please_pex

* Update tool name

* Update config

* Revert plugin.yaml changes as we'll use plz go

* Tidy

* Tidy up python_binary

* Delete go/zip dir

* Add go toolchain rule

* Add go and go_embed toolchains

* Remove unneeded go modules

* Tidy

* Remove hashes for pip_library rules and general tidy

* More tidy

* Remove the testRunnerDeps stuff from pex tool

* Maybe doesn't need quotes?

* Needs quotes but maybe not self?

* Try this

* Make testrunner deps configurable

* Sort out todos

* Tidy up

* Deal with pytest and behave

* Fix testrunner filegroup deps

* These should be self, no?

* Need a subinclude here

* Another subinclude for third_party/python

* Fix hash

* Revert wheel resolver test change because it's a local issue

* Make some more config options optional

* Lint

* Apparently don't need to unzip on python_test

* python_test cmd was missing a -s .whl

* Remove bootstrap stuff from please_pex

* Can't find _please:arcat

* Still called jarcat on release page?

* Add wheel_resolver to release page

* Make plz download tools from interweb

* Make arcat a remote_file rule

* Remove stuff from tools dir

* Move arcat rule to tools/BUILD

* Correct arcat references

* Give wheel_resolver executable correct 

--- a/.plzconfig
+++ b/.plzconfig
@@ -6,7 +6,11 @@ PreloadBuildDefs = test/build_defs/test.build_defs
 
 [Go]
 ImportPath = github.com/please-build/python-rules
+; embedtool = @self//tools/please_go_embed
+gotool = @self//third_party/go:toolchain|go
 
+[Java]
+JarCatTool = @self//tools:arcat
 
 [PluginDefinition]
 name = python
@@ -27,9 +31,9 @@ DefaultValue = ""
 ConfigKey = TestRunner
 DefaultValue = unittest
 
-[PluginConfig "test_runner_bootstrap"]
-ConfigKey = TestRunnerBootstrap
-Optional = true
+[PluginConfig "testrunner_deps"]
+ConfigKey = TestrunnerDeps
+DefaultValue = @self//third_party/python:unittest_bootstrap
 
 [PluginConfig "debugger"]
 ConfigKey = Debugger
@@ -38,7 +42,6 @@ DefaultValue = pdb
 [PluginConfig "module_dir"]
 ConfigKey = ModuleDir
 DefaultValue = third_party.python
-Optional = true
 
 [PluginConfig "pip_tool"]
 ConfigKey = PipTool
@@ -53,7 +56,6 @@ Optional = true
 [PluginConfig "use_pypi"]
 ConfigKey = UsePypi
 DefaultValue = true
-Optional = true
 
 [PluginConfig "pip_flags"]
 ConfigKey = PipFlags
@@ -63,7 +65,6 @@ Optional = true
 [PluginConfig "disable_vendor_flags"]
 ConfigKey = DisableVendorFlags
 DefaultValue = false
-Optional = true
 
 [PluginConfig "wheel_repo"]
 ConfigKey = WheelRepo
