--- a/test/behave/BUILD
+++ b/test/behave/BUILD
@@ -2,7 +2,8 @@ subinclude("//build_defs:python")
 
 package(
     python = {
-        "TEST_RUNNER": "behave"
+        "TEST_RUNNER": "behave",
+        "TESTRUNNER_DEPS": "@self//third_party/python:behave_bootstrap",
     },
 )
 
