--- a/test/pytest/BUILD
+++ b/test/pytest/BUILD
@@ -2,7 +2,8 @@ subinclude("//build_defs:python")
 
 package(
     python = {
-        "TEST_RUNNER": "pytest"
+        "TEST_RUNNER": "pytest",
+        "TESTRUNNER_DEPS": "@self//third_party/python:pytest_bootstrap",
     },
 )
 
