--- a/tools/wheel_resolver/src/wheel_tags/BUILD
+++ b/tools/wheel_resolver/src/wheel_tags/BUILD
@@ -7,5 +7,6 @@ python_library(
     deps = [
         "//third_party/python:distlib",
         "//third_party/python:packaging",
+        "//third_party/python:wheel_filename",
     ],
 )
