--- a/test/pytest/BUILD
+++ b/test/pytest/BUILD
@@ -3,7 +3,7 @@ subinclude("//build_defs:python")
 package(
     python = {
         "TEST_RUNNER": "pytest",
-        "TESTRUNNER_DEPS": "@self//third_party/python:pytest_bootstrap",
+        "TESTRUNNER_DEPS": "//third_party/python:pytest_bootstrap",
     },
 )
 
